抓取页面信息

--- a/src/index.html
+++ b/src/index.html
@@ -15,5 +15,6 @@
 </head>
 <body>
   <div id="app"></div>
+  <script type="text/javascript" src="https://unpkg.com/cheerio@1.0.0-rc.2/index.js"></script>
 </body>
 </html>
